# Ocean-rs

./: .gitignore  Cargo.toml  README.md  build.rs
assets/shaders/: col_ift.comp.hlsl  complex.hlsl  frequency.comp.hlsl  imgui.vert.frag.hlsl  initial_spectrum.comp.hlsl  ocean.comp.mesh.frag.hlsl  ocean.comp.vert.frag.hlsl  ocean.mesh.frag.hlsl  ocean_grid.comp.hlsl  row_ift.comp.hlsl  skybox.mesh.frag.hlsl  skybox.vert.frag.hlsl  triangle.hlsl  triangle.mesh.frag.hlsl  triangle.vert.frag.hlsl
shaders/: triangle.hlsl  triangle.vert
src/: Shader IDL.md  camera.rs  defer.rs  fabric.rs  imgui_backend.rs  main.rs  math.rs  obj_loader.rs  shader_pp.rs  vk_engine.rs  vk_helpers.rs  vk_initializers.rs
src/math/: fft.rs  lin_alg.rs  mod.rs  rand.rs
