[package]
name = "Ocean-rs"
version = "0.1.0"
authors = ["abdelhameed <abdelhameed.h.h@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.3"
ash = "0.37.1+1.3.235"
hassle-rs = "0.5.4"
imgui = "0.8.0"
